--- a/src/styles/scss/Cell.scss
+++ b/src/styles/scss/Cell.scss
@@ -1,8 +1,15 @@
 .Cell {
-  height: 10px;
-  width: 10px;
-  border: 1px solid aliceblue;
-  background-color: blue;
+  height: 2px;
+  width: 2px;
+  // border: 1px solid aliceblue;
   padding: 5px;
   font-size: 6px;
+}
+
+.up {
+  background-color: green;
+
+}
+.down {
+  background-color: blue;
 }
