--- a/src/styles/scss/Cell.scss
+++ b/src/styles/scss/Cell.scss
@@ -1,9 +1,9 @@
 .Cell {
+  align-self: center;
   height: 2px;
   width: 2px;
-  // border: 1px solid aliceblue;
+  // flex: 1;
   padding: 5px;
-  font-size: 6px;
 }
 
 .up {
