--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -1,8 +1,8 @@
 .Cell {
+  align-self: center;
   height: 2px;
   width: 2px;
   padding: 5px;
-  font-size: 6px;
 }
 
 .up {
@@ -14,13 +14,40 @@
 }
 
 .Board {
-  display: inline-block;
+  display: flex;
+  margin: 5px;
   justify-content: center;
-  margin-top: 5px;
+  flex-direction: column;
+}
+.Board .row {
+  display: flex;
+  justify-content: center;
 }
 
-.row {
+.SituationPanel {
+  margin-top: 5px;
+  margin-bottom: 15px;
   display: flex;
+  justify-content: center;
+  flex-direction: row;
+}
+.SituationPanel .column {
+  margin-right: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.SituationPanel .column .situation {
+  font-size: 11px;
+}
+.SituationPanel .column .cell {
+  margin-bottom: 2px;
+}
+
+.App {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
 }
 
 /*# sourceMappingURL=main.css.map */
