--- a/src/styles/scss/Cell.scss
+++ b/src/styles/scss/Cell.scss
@@ -4,6 +4,7 @@
   width: 2px;
   // flex: 1;
   padding: 5px;
+  font-size: 8px;
 }
 
 .up {
@@ -12,4 +13,68 @@
 }
 .down {
   background-color: blue;
+}
+
+.red {
+  background-color: #aa2e25;
+}
+
+.pink {
+  background-color: #a31545;
+}
+
+.purple {
+  background-color: #6d1b7b;
+}
+
+.deepPurple {
+  background-color: #482880;
+}
+
+.indigo {
+  background-color: #2c387e;
+}
+
+.blue {
+  background-color: #1769aa;
+}
+
+.lightBlue {
+  background-color: #0276aa;
+}
+
+.cyan {
+  background-color: #008394;
+}
+
+.teal {
+  background-color: #00695f;
+}
+
+.green {
+  background-color: #357a38;
+}
+
+.lightGreen {
+  background-color: #618833;
+}
+
+.lime {
+  background-color: #8f9a27;
+}
+
+.yellow {
+  background-color: #b2a429;
+}
+
+.amber {
+  background-color: #b28704;
+}
+
+.orange {
+  background-color: #b26a00;
+}
+
+.deepOrange {
+  background-color: #b23c17;
 }
