--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -90,8 +90,8 @@
 }
 
 .SituationPanel {
-  margin-top: 5px;
-  margin-bottom: 15px;
+  margin-left: 15px;
+  margin-bottom: 5px;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -101,10 +101,20 @@
   justify-content: center;
 }
 
+.Controls .buttons {
+  display: flex;
+  flex-direction: column;
+}
+
 .App {
   display: flex;
   flex-direction: column;
   text-align: center;
+}
+.App .header {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
 /*# sourceMappingURL=main.css.map */
