--- a/src/styles/scss/SituationPanel.scss
+++ b/src/styles/scss/SituationPanel.scss
@@ -1,6 +1,6 @@
 .SituationPanel {
-  margin-top: 5px;
-  margin-bottom: 15px;
+  margin-left: 15px;
+  margin-bottom: 5px;
   display: flex;
   justify-content: center;
   flex-direction: column;
