Add margin to labels

--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -116,5 +116,8 @@
   flex-direction: row;
   justify-content: center;
 }
+.App label {
+  margin-right: 3px;
+}
 
 /*# sourceMappingURL=main.css.map */
